--- a/gb/20/1/2/n11761792.md
+++ b/gb/20/1/2/n11761792.md
@@ -1,16 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/ublry267/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/ublry267/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/ublry267/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/ublry267/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/ublry267/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf6123.md#1">诉江</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5287.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1235328.md#1">书籍</a> | <a target="_blank" href="https://github.com/ublry267/www/blob/master/README.md?zsrh#1">翻墙</a></p><p><a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ublry267/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ublry267/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>“带给我宁静的心灵”产品经理赞神韵</h2>
-<img width="600" src="http://i.epochtimes.com/assets/uploads/2020/01/2001012046462639-600x400.jpg" />
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/xcbfpq327/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/xcbfpq327/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/xcbfpq327/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/xcbfpq327/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>产品经理：神韵音乐动听 带给我宁静的心灵</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/01/2001012046462639-600x400.jpg" />
 <h6>2020年1月1日下午，Turo公司的产品经理Kendra Cook和祖母一起观看了神韵环球艺术团在旧金山的第3场演出。（周容／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2020年01月02日讯】（大纪元记者周容美国旧金山报导）2020年1月1日新年伊始，美国<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>环球艺术团在<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md">旧金山歌剧院</a>（San Francisco Opera House）展开第三场演出，纯善纯美的神韵艺术，为当地观众带来了别具一格的新年礼物。</p>
-<p>Turo公司的产品经理Kendra Cook表示，她到处都看到<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md">神韵</a>广告，一直想来看，今天终于如愿以偿。“美不胜收，令人陶醉。”她对神韵演出赞不绝口，“<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>演员之间的互动配合的非常好，令人惊叹。”</p>
-<p>第一次观看神韵的Cook被中国古典舞优雅空灵的舞姿深深吸引，“<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md">舞蹈</a>演员轻盈飘逸。感觉她们在飘着走，真是美。我尤其喜欢那个有长长袖子的水袖舞。”</p>
-<p>“男舞蹈演员的舞姿很雄浑、流畅，那个蒙古族舞蹈，他们身体的平衡保持的很好，我看的很开心。”她说。</p>
-<p>神韵现场交响乐团结合东、西方乐器，成功打造独一无二的原创<a href="https://github.com/ublry267/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md">音乐</a>也让Cook享受其中，“神韵的音乐非常动听，我被神韵的音乐所触动。神韵带给我宁静的心灵。”</p>
+	<p>【大纪元2020年01月02日讯】（大纪元记者周容美国旧金山报导）2020年1月1日新年伊始，美国<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>环球艺术团在<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E6%97%A7%E9%87%91%E5%B1%B1%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">旧金山歌剧院</a>（San Francisco Opera House）展开第三场演出，纯善纯美的神韵艺术，为当地观众带来了别具一格的新年礼物。</p>
+<p>Turo公司的产品经理Kendra Cook表示，她到处都能看到<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>广告，一直想来看，今天终于如愿以偿。“美不胜收，令人陶醉。”她对神韵演出赞不绝口，“<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员之间的互动配合得非常好，令人惊叹。”</p>
+<p>第一次观看神韵的Cook被中国古典舞优雅空灵的舞姿深深吸引，“<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E8%88%9E%E8%B9%88.md#1">舞蹈</a>演员轻盈飘逸。感觉她们在飘着走，真是美。我尤其喜欢那个有长长袖子的水袖舞。”</p>
+<p>“男舞蹈演员的舞姿很雄浑、流畅，那个蒙古族舞蹈，他们身体的平衡保持得很好，我看得很开心。”她说。</p>
+<p>神韵现场乐团演奏结合东、西方乐器，成功打造独一无二的原创<ahref="https://github.com/xcbfpq327/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>也让Cook享受其中，“神韵的音乐非常动听，我被神韵的音乐所触动。神韵带给我宁静的心灵。”</p>
 <p>神韵艺术家的精湛演出，也让Cook的祖母感到很喜爱，她说：“我非常喜欢神韵，那些精彩的舞蹈，绚丽的色彩，还有如诗如画的背景天幕，所有的一切都太美妙了。”</p>
 <p>除了艺术之美，神韵还展现了深刻的精神内涵，对此Cook的祖母深表赞同，“我是有信仰的人，相信神的存在。我认为，有一天，邪恶将不会在地球上存在，人类将拥有美好的未来，就像神韵展现的那样。”</p>
 <p>她感谢神韵带给她宁静的心，她说，我们生活的这个世界，每个人都有很大的压力，生活得很苦，“神韵带给人宁静、抚慰，带给人很大的快乐。”</p>
@@ -18,40 +18,46 @@
 	
 <hr>
 
-#### 本文转自<a href="http://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="http://www.epochtimes.com/gb/20/1/2/n11761792.htm">“带给我宁静的心灵”产品经理赞神韵</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11747888.htm">受贸易战影响 大陆上市公司近半净利缩水</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11747380.htm">大陆上市公司业绩差 年末24家“卖房筹资”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726443.htm">A股2000上市公司 大股东减持数千亿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/15/n11723282.htm">年底上市公司卖房、卖地、卖车、卖股权</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/7/n11706577.htm">为保壳 大陆亏损上市公司频卖房自救</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/5/n11703881.htm">中国A股上市公司业绩差 多家恐三年连亏</a></li>
-> <li><a href="https://github.com/ublry267/djy/blob/master/gb/19/5/16/n11262407.md">大陆上市车企亏损16亿 要卖400套房</a></li>
-> <li><a href="https://github.com/ublry267/djy/blob/master/gb/19/12/15/n11723282.md">年底上市公司卖房、卖地、卖车、卖股权</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="http://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11750092.htm">【直播回放】逾103万港人元旦大游行</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11759265.htm">【翻墙必看】2020中共面临“波涛汹涌”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11759062.htm">偷带癌症研究材料出境 中国学生在美被控罪</a></li>
-> <li><a href="http://www.epochtimes.com/gb/20/1/1/n11759427.htm">中共两将军辞人大职务 被指“严重违纪”</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/26/n11745932.htm">《推背图》第45象 预言中共气数已尽</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/24/n11741785.htm">《兰亭序》异彩绝代 书法家赞天下第一行书</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/25/n11745673.htm">父梦桂树 子梦黄鹤 奇梦超前预言一生</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/16/n11726783.htm">寻道的贵族</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11756631.htm">传武汉爆发SARS疫情 7例病情危重</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11757201.htm">香港学者：武汉疫情严重性与SARS相当</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758754.htm">韩国瑜连喊三声习主席 其副手不承认习头衔</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/27/n11750457.htm">【新闻看点】新年祝福 全球网友寄语香港</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11758753.htm">【新闻看点】反渗透法剑指中共 看台湾民主路</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11756845.htm">《拍案惊奇》2020台湾大选两类观点引关注</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11756136.htm">传陆片《八佰》再遭撤档 被审查11处涉敏感</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11755952.htm">李英爱晒龙凤胎近照 夸儿子是爱妹妹的好哥哥</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11754467.htm">IZ*ONE与X1将重启活动 选秀真实排名不公开</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/31/n11757023.htm">苏慧伦将登跨年舞台 谈幸福事：与家人出游</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/12/30/n11754041.htm">GOT7有谦因健康因素缺席《MBC歌谣大祭典》</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/1/n11759551.md#1">大学人事部经理：神韵应该在中国上演</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/1/n11759600.md#1">深深受触动 心理学家接连两天观看神韵</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/1/n11759664.md#1">神韵缤纷多彩 公司总裁夫妇享受文化之旅</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/1/n11759751.md#1">神韵精彩程度超预期 物业经理夫妇为之着迷</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/1/n11759782.md#1">神韵传递伟大信息 旧金山精英找到心灵净土</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/1/1/n11760090.md#1">神韵神奇美好 公司设计总监夫妇陶醉其中</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ublry267/djy/blob/master/gb/20/1/2/n11761792.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ublry267/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ublry267/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ublry267/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ublry267/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/21/n10235717.md#1" target="_blank">袁斌：重温“革命烈士”夏明翰的《就义诗》（上）</a></li><li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/9/2/26/n2443847.md#1" target="_blank">《中共弄巧成拙》(1):天安门自焚伪案</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/30/n12442859.md#1">《圣经》与《推背图》预言的应验与变换5</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/26/n12503625.md#1">麦克阿瑟的战后岁月及临终前的预言</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/9/3/n12378228.md#1">明朝神奇歌谣 寥寥数语 隐含天下变局</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523568.md#1">被预言选中的人：川普和曹操</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/30/n12512315.md#1">像罗宇这样的红二代</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525168.md#1">【珍言真语】记者忆采访被刺：报真相不退缩</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12523612.md#1">【思想领袖】纳瓦罗：美媒成中共“有用白痴”</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520354.md#1">【图解】2020美国大选 投票结果何时出</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520247.md#1">华为副总裁深圳猝死 曾在伦敦当记者</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520577.md#1">【新闻看点】决战日川普胜算？连任料有大动作</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525654.md#1">获胡歌惊喜探班 唐嫣害羞尖叫一直捂脸</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520465.md#1">登台献唱被拍成五五身 李荣浩：这还算个人吗</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12525868.md#1">赵丽颖不识“兰”字惹议 主播帮圆场却更尴尬</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12522915.md#1">夫妻俩持不同政见 黄秋生有一套相处之道</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520656.md#1">邓超上火获9岁儿支招 网友：父子似互换角色</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520245.md#1">罹癌后存活50年  台大医师：爬山是一帖良药</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/10/31/n12515130.md#1">这些蔬果有苦味别吃 可致中毒！误食3步处理</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/4/n12524129.md#1">被寄养小狗花半个月走100公里回家找主人</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/2/n12520485.md#1">足底筋膜炎4招改善！症状、治疗和复健全图解</a></li>
+<li><a href="https://github.com/xcbfpq327/djy/blob/master/gb/20/11/3/n12521919.md#1">传川普同意出售F-22战机给以色列</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/xcbfpq327/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/1/2/n11761792.htm">产品经理：神韵音乐动听 带给我宁静的心灵</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/xcbfpq327/djy/blob/master/gb/20/1/2/n11761792.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/xcbfpq327/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/xcbfpq327/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/xcbfpq327/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
